fix white space

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -823,7 +823,7 @@ blockquote cite {
    ========================================================================== */
 
 
-.site-footer {position: absolute;
+.site-footer {position: relative;
   bottom: 0;}
 .site-footer small { display: inline-block; }
 
